fix: fix console log be covered bug
fix #12901

--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -100,6 +100,7 @@
             padding-right: 65px;
             margin-bottom: 0;
             border-bottom: 1px solid #d9d9d9;
+            background: #ffffff;
         }
 
         .close-console {
