--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/dark.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/dark.scss
@@ -436,6 +436,7 @@ $fontColor1: #2491F7;
         .ant-tabs.ant-tabs-card > .ant-tabs-bar {
             border-bottom: 0;
             box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
+            background: #2D2D2D;
 
             .ant-tabs-tab {
                 background: $color2;
